[package]
authors = ["Xion <xionwin@hotmail.com>"]
edition = "2018"
readme = "README.md"
name = "clu"
version = "0.1.0"

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"
cortex-m-semihosting = "*"

stm32f4xx = { path = "../stm32f4xx/" }


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
