[package]
name = "stm32f407"
version = "0.1.0"
authors = ["win"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"
embedded-hal = "*"
nb = "*"

vdhal = { path = "../vdhal/" }

[dependencies.stm32f4xx-hal]
features = ["stm32f407", "rt"]
version = "*"


