[package]
name = "stm32f4xx"
version = "0.1.0"
authors = ["win"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"
embedded-hal = "*"


# cortex-m = "0.6.1"
# cortex-m-rt = "0.6.11"
# panic-halt = "0.2.0"
# cortex-m-semihosting = "0.3.3"
# embedded-hal = "*"

vdhal = { path = "../vdhal/" }

[dependencies.stm32f4xx-hal]
features = ["stm32f407", "rt"]
version = "*"


